...
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
    
    private lazy var seriesLabel: UILabel = {
        let label = UILabel()
        label.text = "Indian Premier League"
        label.font = .boldSystemFont(ofSize: 18)
        label.textColor = .black
        label.adjustsFontSizeToFitWidth = true
        label.textAlignment = .left
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
...
